2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-08  Seth Nickell  <snickell@stanford.edu>

	* gnome-window-manager.c: (gnome_window_manager_set_theme),
	(gnome_window_manager_get_theme_list),
	(gnome_window_manager_set_font),
	(gnome_window_manager_set_focus_follows_mouse),
	(gnome_window_manager_get_user_theme_folder),
	(gnome_window_manager_class_init):
	* gnome-window-manager.h:

	Add get_user_theme_folder, fix some minor bugs.
	
2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-06-04  Seth Nickell  <snickell@stanford.edu>

	* gnome-window-manager.c: (gnome_window_manager_new):

	Change to X-GnomeWMSettingsLibrary, because its evil to add new items to
	.desktop files without the X :-)

2002-06-04  Seth Nickell  <snickell@stanford.edu>

	* gnome-window-manager.c: (gnome_window_manager_new),
	(gnome_window_manager_class_init):
	* gnome-window-manager.h:

	Get rid of "get" calls, since we should just rely on the GConf settings being right.
	Otherwise you get ambiguous problems with merging settings, figuring out which
	takes predecedence, etc.
	
2002-06-04  Seth Nickell  <snickell@stanford.edu>

	* gnome-window-manager.c: (gnome_window_manager_get_ditem):
	* gnome-window-manager.h:
	* gnome-wm-manager.c: (gnome_wm_manager_set_current),
	(gnome_wm_manager_get_current), (gnome_wm_manager_same_wm):
	* gnome-wm-manager.h:

	Clean the APIs a little bit, add a mechanism for discovering if two GnomeWindowManager *s are
	the same Window Manager underneath.
	
2002-06-03  Kjartan Maraas  <kmaraas@gnome.org>

	* .cvsignore: Add newline
	* gnome-wm-manager.c: Added #include <config.h>
	
2002-06-02  Seth Nickell  <snickell@stanford.edu>

	* .cvsignore:

	Update to deal with the .pc file that gets generated.
	
	* Makefile.am:

	Build a real library, not just a non-installed. This is to get around
	problems dealing with GObject inheritance and static memory problems. We