@@ -1,3 +1,7 @@
+2002-08-26  Jody Goldberg <jody@gnome.org>
+
+	* gnome-wm-manager.c (gnome_wm_manager_get_current) : handle NULL.
+
 2002-08-21  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.0
